--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
           </fieldset>
         </form>
       </section>
-      <section class="random-dish"></section>
+      <section class="random-dish">
+        <p class="dish-prompt">You should make:</p>
+        <p class="dish-result"></p>
+        <img src="assets/cookpot.svg" alt="a cookput graphic" class="cookpot">
+      </section>
     </main>
   </body>
   <script type="text/javascript" src="main.js"></script>
