--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <nav>
       <h1>What's for Dinner?</h1>
-    </header>
+    </nav>
     <main>
       <section class="dish-type">
         <form>
