Add labels to radio buttons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <form>
           <fieldset>
            <legend>What are you looking for?<span class="asterisk">*</span></legend>
-           <input type="radio" name="dish_type" value="side">Side<br>
-           <input type="radio" name="dish_type" value="main">Main Dish<br>
-           <input type="radio" name="dish_type" value="dessert">Dessert<br>
+           <input type="radio" name="dish_type" value="side" id="side">
+           <label for="side">Side</label>
+           <input type="radio" name="dish_type" value="main" id="main">
+           <label for="main">Main Dish</label>
+           <input type="radio" name="dish_type" value="dessert" id="dessert">
+           <label for="dessert">Dessert</label>
            <button class="submit">LET'S COOK!</button>
           </fieldset>
         </form>
