Add line breaks to radio buttons

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
           <fieldset>
            <legend>What are you looking for?<span class="asterisk">*</span></legend>
            <input type="radio" name="dish_type" value="side" id="side">
-           <label for="side">Side</label>
+           <label for="side">Side</label><br>
            <input type="radio" name="dish_type" value="main" id="main">
-           <label for="main">Main Dish</label>
+           <label for="main">Main Dish</label><br>
            <input type="radio" name="dish_type" value="dessert" id="dessert">
-           <label for="dessert">Dessert</label>
+           <label for="dessert">Dessert</label><br>
            <button class="submit">LET'S COOK!</button>
           </fieldset>
         </form>
