--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="data.js"></script>
+    <script src="main.js"></script>
   </head>
   <body>
     <nav>
