--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
   <head>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <script src="data.js"></script>
-    <script src="main.js"></script>
   </head>
   <body>
     <nav>
@@ -31,5 +29,6 @@
       </section>
     </main>
   </body>
+  <script type="text/javascript" src="data.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </html>
