Modify radio button values

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <form>
           <fieldset>
            <legend>What are you looking for?<span class="asterisk">*</span></legend>
-           <input type="radio" name="dish_type" value="side" id="side">
+           <input type="radio" name="dish_type" value="sides" id="side">
            <label for="side">Side</label><br>
-           <input type="radio" name="dish_type" value="main" id="main">
+           <input type="radio" name="dish_type" value="mains" id="main">
            <label for="main">Main Dish</label><br>
-           <input type="radio" name="dish_type" value="dessert" id="dessert">
+           <input type="radio" name="dish_type" value="desserts" id="dessert">
            <label for="dessert">Dessert</label><br>
            <button class="submit">LET'S COOK!</button>
           </fieldset>
