--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </form>
       </section>
       <section class="random-dish">
-        <p class="dish-prompt">You should make:</p>
+        <p class="dish-prompt hidden">You should make:</p>
         <p class="dish-result"></p>
         <img src="assets/cookpot.svg" alt="a cookput graphic" class="cookpot">
       </section>
