Add Entire Meal selection option

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
            <label for="main">Main Dish</label><br>
            <input type="radio" name="dish_type" value="desserts" id="dessert">
            <label for="dessert">Dessert</label><br>
+           <input type="radio" name="dish_type" value="meal" id="meal">
+           <label for="meal">Entire Meal</label><br>
            <button class="submit">LET'S COOK!</button>
           </fieldset>
         </form>
