--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1>What's for Dinner?</h1>
     </nav>
     <main>
-      <section class="dish-type">
+      <section class="dish-selection" id="dish-selection">
         <form>
           <fieldset>
            <legend>What are you looking for?<span class="asterisk">*</span></legend>
@@ -20,14 +20,14 @@
            <label for="dessert">Dessert</label><br>
            <input type="radio" name="dish_type" value="meal" id="meal">
            <label for="meal">Entire Meal</label><br>
-           <button class="submit">LET'S COOK!</button>
+           <button class="submit" id="lets-cook">LET'S COOK!</button>
           </fieldset>
         </form>
       </section>
-      <section class="random-dish">
-        <p class="dish-prompt hidden">You should make:</p>
-        <p class="dish-result"></p>
-        <img src="assets/cookpot.svg" alt="a cookput graphic" class="cookpot">
+      <section class="random-dishes">
+        <p class="dish-prompt hidden" id="should-make">You should make:</p>
+        <p class="dish-result" id="dish-result"></p>
+        <img src="assets/cookpot.svg" alt="a cookput graphic" class="cookpot" id="cookpot">
       </section>
     </main>
   </body>
