Add clear button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <p class="dish-prompt hidden" id="should-make">You should make:</p>
         <p class="dish-result" id="dish-result"></p>
         <img src="assets/cookpot.svg" alt="a cookput graphic" class="cookpot" id="cookpot">
+        <button class="clear hidden" id="clear">CLEAR</button>
       </section>
     </main>
   </body>
