Add error message for form

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
            <button class="submit" id="lets-cook">LET'S COOK!</button>
           </fieldset>
         </form>
+        <p class="error hidden" id="form-error">Please select an option</p>
       </section>
       <section class="random-dishes">
         <p class="dish-prompt hidden" id="should-make">You should make:</p>
